# surrealdb-take-gpt4o

./: Cargo.toml  README.md
src/: main.rs
