[package]
name = "exper-surrealdb-take-gpt4o"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
surrealdb = { version = "1.5.1", features = ["kv-mem", "sql2"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
